--- a/index.html
+++ b/index.html
@@ -3,10 +3,6 @@
 	<head>
 		<title>Result</title>
 	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
+	<body><h1>STELLAR FOX</h1>
 	</body>
 </html>
